[package]
name = "driver2"
version = "0.1.0"
edition = "2024"

[dependencies]
libscail = { path = "../libscail" }
runner-proc-macro = { path = "../libscail/runner-proc-macro" }
spurs = "0.9.2"
clap = { version = "4.5.53", features = ["color"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"